# arkana

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  api_services.md  datadesk.md  db_management.md  docker-compose.server.yml  docker-compose.yml  mysql_arkana_setup.sql  pyproject.toml  requirements.md  requirements.txt
.github/workflows/: README.md  deploy.yml
docs/: API.md  auth.md  route_authorization.md
scripts/: cli_set_api_pw.py  cli_set_pw.py  create_dummy_dashboard.py  supabase_cred_functions.json  try_arkana_sphere.py  try_arkana_sphere_r_graphic.py  try_create_dashboard_r_sinus.py  try_supabase_login.py
sql/: create_ark_notes_tables.sql  drop_arkana_user_group_tables.sql  rename_dashboard_to_report.sql
src/arkana_api_service/: __main__.py  app.py  dependencies.py  route_auth.py
src/arkana_auth/: amezitUserObject.py  amezit_supabase_service.py  arkana_usage_accounting.py  supabase_client.py  supabase_connector.py  user_group.py  user_manager.py  user_object.py
src/arkana_mdd/: __init__.py  __main__.py
src/arkana_mdd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/arkana_mdd_db/: __init__.py  __main__.py  app.py  auth.py  config.py  constants.py  frame_executor.py  main_db.py  models.py
src/arkana_sphere/: __init__.py  arkana_python_sandbox_session.py  arkana_r_session.py  arkana_session_interface.py  arkana_session_manager.py  arkana_session_run_result.py
src/mdd_arkana_object/: ark_board.py  ark_notes.py  (+5 more)
tests/: test_ark_notes.py  test_report_and_sessions.py  test_supabase_functions.py  test_supabase_integration.py
(+14 files in other folders)
